[gd_scene load_steps=17 format=3 uid="uid://mkcb1tttmlvi"]

[ext_resource type="Script" uid="uid://c8c0wmyovrg8k" path="res://scripts/ui/betting_panel_ui.gd" id="1_xsydr"]
[ext_resource type="Texture2D" uid="uid://b0jwg2k4ghf0a" path="res://assets/sprites/UI/Animals_UI4.png" id="3_l8jla"]
[ext_resource type="Texture2D" uid="uid://b2soeeuiywi1c" path="res://assets/sprites/UI/background_panel_1.png" id="3_porug"]
[ext_resource type="Texture2D" uid="uid://dn37ih4mk53ci" path="res://assets/sprites/UI/button_1.png" id="4_porug"]
[ext_resource type="Texture2D" uid="uid://c5tg3kmrlq38l" path="res://assets/sprites/UI/button_2.png" id="4_xsydr"]
[ext_resource type="Texture2D" uid="uid://bjf7bro2bkwxg" path="res://assets/sprites/UI/Animals_UI8.png" id="5_07u0o"]
[ext_resource type="Texture2D" uid="uid://kki4m82jc54s" path="res://assets/sprites/UI/arrow.png" id="5_mh340"]
[ext_resource type="Texture2D" uid="uid://3ndqmve4wjom" path="res://assets/sprites/UI/Animals_UI6.png" id="6_7b6id"]
[ext_resource type="Texture2D" uid="uid://df8nea6fxt3ot" path="res://assets/sprites/UI/Animals_UI3.png" id="7_viks2"]
[ext_resource type="Theme" uid="uid://dbivxp4ikj2iy" path="res://resources/main_menu_style.tres" id="10_7b6id"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_07u0o"]
texture = ExtResource("3_porug")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_viks2"]
texture = ExtResource("4_xsydr")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7b6id"]
texture = ExtResource("4_porug")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsydr"]
texture = ExtResource("3_porug")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_l8jla"]
grow_begin = 45.0
grow_end = 45.0
thickness = 11

[sub_resource type="StyleBoxLine" id="StyleBoxLine_viks2"]

[node name="BettingUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25
script = ExtResource("1_xsydr")

[node name="BettingPanel" type="Panel" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BettingPanel"]
layout_mode = 2
offset_right = 590.0
offset_bottom = 310.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="root" type="HBoxContainer" parent="BettingPanel/MarginContainer"]
layout_mode = 2

[node name="LeftPanel" type="Panel" parent="BettingPanel/MarginContainer/root"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_07u0o")

[node name="MarginContainer" type="MarginContainer" parent="BettingPanel/MarginContainer/root/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="left" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer"]
layout_mode = 2

[node name="FirstLineupButton" type="Button" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left"]
custom_minimum_size = Vector2(200, 55)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_viks2")
theme_override_styles/normal = SubResource("StyleBoxTexture_7b6id")

[node name="HBoxContainer" type="HBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FirstLineupButton"]
layout_mode = 1
anchors_preset = -1
offset_right = 261.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
alignment = 1

[node name="FirstLineupTextureRect" type="TextureRect" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FirstLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("6_7b6id")

[node name="VBoxContainer" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FirstLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="name" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FirstLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Betting odds:"

[node name="FirstLineupOdds" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FirstLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "1.35"

[node name="SecondLineupButton" type="Button" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left"]
custom_minimum_size = Vector2(200, 55)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_viks2")
theme_override_styles/normal = SubResource("StyleBoxTexture_7b6id")

[node name="HBoxContainer" type="HBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/SecondLineupButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 61.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
alignment = 1

[node name="SecondLineupTextureRect" type="TextureRect" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/SecondLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("7_viks2")

[node name="VBoxContainer" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/SecondLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="name" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/SecondLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Betting odds:"

[node name="SecondLineupOdds" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/SecondLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "<odds>"

[node name="ThirdLineupButton" type="Button" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left"]
custom_minimum_size = Vector2(200, 55)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_viks2")
theme_override_styles/normal = SubResource("StyleBoxTexture_7b6id")

[node name="HBoxContainer" type="HBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/ThirdLineupButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 61.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
alignment = 1

[node name="ThirdLineupTextureRect" type="TextureRect" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/ThirdLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("3_l8jla")

[node name="VBoxContainer" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/ThirdLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="name" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/ThirdLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Betting odds:"

[node name="ThirdLineupOdds" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/ThirdLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "<odds>"

[node name="FourthLineupButton" type="Button" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left"]
custom_minimum_size = Vector2(200, 55)
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_viks2")
theme_override_styles/normal = SubResource("StyleBoxTexture_7b6id")

[node name="HBoxContainer" type="HBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FourthLineupButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 61.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 0
alignment = 1

[node name="FourthLineupTextureRect" type="TextureRect" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FourthLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("5_07u0o")

[node name="VBoxContainer" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FourthLineupButton/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="name" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FourthLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Betting odds:"

[node name="FourthLineupOdds" type="Label" parent="BettingPanel/MarginContainer/root/LeftPanel/MarginContainer/left/FourthLineupButton/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "<odds>"

[node name="RightPanel" type="Panel" parent="BettingPanel/MarginContainer/root"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_xsydr")

[node name="MarginContainer3" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimalTextureRect" type="TextureRect" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_07u0o")

[node name="MarginContainer" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = 55

[node name="Panel" type="Panel" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxLine_l8jla")

[node name="BetButton" type="Button" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer/Panel"]
z_index = 100
custom_minimum_size = Vector2(80, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -25.0
offset_right = 45.5
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"
theme_override_constants/outline_size = 4
text = "Bet on ME!"

[node name="MarginContainer4" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_bottom = 60

[node name="TextureRect2" type="TextureRect" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer4"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("5_mh340")
flip_h = true

[node name="MarginContainer5" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 60

[node name="TextureRect2" type="TextureRect" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer5"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("5_mh340")

[node name="MarginContainer2" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 25

[node name="VBoxContainer" type="VBoxContainer" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Animal Name:"
horizontal_alignment = 1

[node name="AnimalNameLabel" type="Label" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer3/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "<name>"
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="BettingPanel/MarginContainer/root/RightPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -5.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer4"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxLine_viks2")

[node name="CloseButton" type="Button" parent="BettingPanel/MarginContainer/root/RightPanel/MarginContainer4/Panel"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.5
offset_right = 18.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_7b6id")
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="BettingPanel/MarginContainer/root/RightPanel/MarginContainer4/Panel/CloseButton" to="." method="_on_close_button_pressed"]
